--- a/Weboldal/package.json
+++ b/Weboldal/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase": "^10.7.2",
     "lucide-react": "^0.312.0",
     "next": "13.5.6",
     "react": "^18",
