--- a/Weboldal/package.json
+++ b/Weboldal/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.8.0",
     "lucide-react": "^0.312.0",
     "next": "13.5.6",
+    "pnpm": "^8.15.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
