--- a/Weboldal/package.json
+++ b/Weboldal/package.json
@@ -21,6 +21,7 @@
     "pnpm": "^8.15.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
     "reactjs-popup": "^2.0.6",
     "tailwind-merge": "^2.2.1",
